add thanks html

--- a/rsvp/templates/rsvp/thanks.html
+++ b/rsvp/templates/rsvp/thanks.html
@@ -1,1 +1,6 @@
-<h1>Thanks!</h1>
+{% extends 'base.html' %}
+{% block content %}
+    <h1>Thanks!</h1>
+    <p> You should receive an email from us shortly confirming your RSVP, and we'll send you more information as the date approaches!</p>
+    <p><b> We can't wait to see you!</b> </p>
+{% endblock %}
