--- a/wedding/templates/base.html
+++ b/wedding/templates/base.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/css/bootstrap.min.css" integrity="sha384-MIwDKRSSImVFAZCVLtU0LMDdON6KVCrZHyVQQj6e8wIEJkW4tvwqXrbMIya1vriY" crossorigin="anonymous">
 
     <!-- Your stuff: Third-party CSS libraries go here -->
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     
     <!-- This file stores project-specific CSS -->
     <link href="{% static 'css/project.css' %}" rel="stylesheet">
@@ -28,6 +29,12 @@
   </head>
 
   <body>
+  <div class="m-b-1">
+      <nav class="navbar navbar-dark navbar-fixed-top" style="background-color: #009999;">
+          <div class="container header-container">
+              <a class="navbar-brand" href="#">The Vanderpool Wedding</a>
+          </div>
+      </nav>
     <div class="container">
 
       {% if messages %}
@@ -41,6 +48,7 @@
       {% endblock content %}
 
     </div> <!-- /container -->
+</div>
 
     {% block modal %}{% endblock modal %}
 
