add media query for header font

--- a/wedding/static/css/project.css
+++ b/wedding/static/css/project.css
@@ -53,3 +53,8 @@ body {
     text-align: center;
     font-family: 'Pacifico', cursive;
 }
+@media (max-width: 600px) {
+    .navbar-brand {
+        font-size: 32px; 
+    }
+}
