--- a/wedding/templates/pages/home.html
+++ b/wedding/templates/pages/home.html
@@ -1,1 +1,64 @@
 {% extends "base.html" %}
+{% block content %}
+
+    <section id="venue">
+        <div class="row">
+            <div class="col-md-6 col-sm-6 text-xs-center venue-blurb">
+                <div class="text-wrapper">
+                    <h1>The Venue</h1>
+                    <p>Don't let it's quaint appearance fool you - TerraDorna combines beautiful Texas hill country with a modern and high-tech reception floor. The night promises to be one hell of a party.</p>
+                </div>
+            </div>
+            <div class="col-md-6 col-sm-6">
+                <img class="img-fluid" src="http://terradorna.com/wp-content/uploads/2015/01/Terradorna-wedding-venue1.jpg">
+            </div>
+        </div>
+    </section>
+
+    <section id="hotel">
+        <div class="row">
+            <div class="col-md-6 col-sm-6 text-xs-center">
+                <iframe width="100%" height="100%" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAeRv7fJhHpvms3n39ejcaEH3iRj7ERYRk&q=Sleep+Inn+Suites,Austin+TX" allowfullscreen>
+                </iframe>
+            </div>
+            <div class="col-md-6 col-sm-6 text-xs-center hotel-blurb">
+                <div class="text-wrapper">
+                    <h1>Hotel and Accomodations</h1> 
+                    <p>Accomodations are at Sleep Inn and Suites in Austin on Highway 290 East. Mention that you're reserving for the wedding when you make your reservation!</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="registries">
+        <h1 class="text-xs-center">Registries</h1> 
+        <div class="container registry-container">
+            <div class="row text-xs-center">
+                <div class="col-md-4 col-sm-6">
+                    <div class="registry-card">
+                        <img src="http://gazettereview.com/wp-content/uploads/2015/12/Amazon-Logo.png">
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="registry-card">
+                        <img src="http://chrigitte.com/wp-content/uploads/2015/05/bed-bath.png">
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="registry-card">
+                        <img src="http://zagarino-horan.com/assets/myregistry-5519aa338bf07ad67dcb0629bdf3c89bb45c8411a04255d63589fbebea7e38b7.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="row" style="height: 100%;">
+            <div class="col-xs-12">
+                <div class="text-wrapper text-xs-center">
+                    <p>Questions? Concerns? Contact us!</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+{% endblock %}
